--- a/seldon-deploy.yaml
+++ b/seldon-deploy.yaml
@@ -15,7 +15,7 @@ spec:
           type: MODEL
           children: 
               - name: step-two
-                modelUri: "MLMFlow-Deployment-Controller-DEMO-01-test"
+                modelUri: "iris demo"
                 implementation: MLFLOW_SERVER
                 type: MODEL
                 children: []
