--- a/seldon-deploy-var.yaml
+++ b/seldon-deploy-var.yaml
@@ -13,17 +13,17 @@ spec:
           type: MODEL
           children: 
               - name: step-two
-                modelUri: mlflow.oss["iris demo"]
+                modelUri: mlflow.oss_blob["iris demo"]
                 implementation: MLFLOW_SERVER
                 type: MODEL
                 children: []
         - name: step-three
           implementation: MLFLOW_SERVER
-          modelUri: mlflow.oss["iris demo"]
+          modelUri: mlflow.oss_blob["iris demo"]
           type: MODEL
           children: []
       implementation: MLFLOW_SERVER
-      modelUri: mlflow.oss["iris demo"]
+      modelUri: mlflow.oss_blob["iris demo"]
       logger:
         url: http://broker-ingress.knative-eventing.svc.cluster.local/demo/default
         mode: all
