--- a/seldon-deploy-var.yaml
+++ b/seldon-deploy-var.yaml
@@ -8,22 +8,22 @@ spec:
   - graph:
       children:
         - name: step-one
-          modelUri: mlflow.blob["MLMFlow-Deployment-Controller-DEMO-01"]
+          modelUri: {{ mlflow.blob["MLMFlow-Deployment-Controller-DEMO-01"] }}
           implementation: MLFLOW_SERVER
           type: MODEL
           children: 
               - name: step-two
-                modelUri: mlflow.blob["iris demo"]
+                modelUri: {{ mlflow.blob["iris demo"] }}
                 implementation: MLFLOW_SERVER
                 type: MODEL
                 children: []
         - name: step-three
           implementation: MLFLOW_SERVER
-          modelUri: mlflow.blob["iris demo"]
+          modelUri: {{ mlflow.blob["iris demo"] }}
           type: MODEL
           children: []
       implementation: MLFLOW_SERVER
-      modelUri: mlflow.blob["iris demo"]
+      modelUri: {{ mlflow.blob["iris demo"] }}
       logger:
         url: http://broker-ingress.knative-eventing.svc.cluster.local/demo/default
         mode: all
